--- a/Projeto_SASS/package.json
+++ b/Projeto_SASS/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "sass",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "sass": "^1.63.3"
-  }.
-  "scripts":{
-    "sass:"
+    "name": "projeto_sass",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+      "sass": "sass source/main.scss build/main.css --watch",
+      "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+      "sass": "^1.63.3"
+    }
   }
-}
